Fixed CLOUD-1506 "Layout on invite/signup complete profile page is broken in new default theme"
git-svn-id: http://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@48873 7033f55c-6c29-4ad8-afba-765cb616e738

--- a/root/projects/slingshot/source/web/themes/lightTheme/presentation.css
+++ b/root/projects/slingshot/source/web/themes/lightTheme/presentation.css
@@ -1421,8 +1421,6 @@ body.alfresco-guest
 
 .alfresco-guest .theme-overlay
 {
-   width: 266px;
-   height: 252px;
    padding-left: 24px;
    font-family: Open Sans,Arial,Helvetica,sans-serif;
    color: #333;
